# obs-game-script-translate

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  switch-english-learning.md
.github/scripts/: gen_obs_def.py
.github/workflows/: ci.yml  release.yml
installer/: obs-game-translator.iss
obs-plugin/: CMakeLists.txt
obs-plugin/cmake/: PluginInfo.plist
obs-plugin/data/locale/: en-US.ini  ja-JP.ini  zh-CN.ini
obs-plugin/src/: audio-output.cpp  audio-output.h  claude-api.cpp  claude-api.h  claude-provider.cpp  glm-provider.cpp  image-encode.cpp  image-encode.h  llm-provider.cpp  llm-provider.h  llm-providers-internal.h  llm-utils.cpp  llm-utils.h  plugin-main.cpp  translate-source.cpp  translate-source.h  tts-gemini.cpp  tts-gemini.h  tts-replicate.cpp  tts-replicate.h  voice-analysis.cpp  voice-analysis.h  voice-cache.cpp  voice-cache.h
obs-plugin/tests/: test_base64.cpp  test_image_encode.cpp  test_providers.cpp  test_system_prompt.cpp
obs-plugin/tests/stubs/: obs_stub.cpp
prototype/: analyze.py  pyproject.toml
